Fix horizontal scrolling problem

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
-html {
-    overflow-x: hidden;
-    overflow-y: scroll; 
+html{
+	overflow-x: hidden;
 }
 
 h2, h3{
